@@ -1629,12 +1629,12 @@ name|other
 operator|.
 name|slop
 operator|&&
+name|termArraysEquals
+argument_list|(
 name|this
 operator|.
 name|termArrays
-operator|.
-name|equals
-argument_list|(
+argument_list|,
 name|other
 operator|.
 name|termArrays
@@ -1670,9 +1670,7 @@ argument_list|)
 operator|^
 name|slop
 operator|^
-name|termArrays
-operator|.
-name|hashCode
+name|termArraysHashCode
 argument_list|()
 operator|^
 name|positions
@@ -1681,6 +1679,256 @@ name|hashCode
 argument_list|()
 operator|^
 literal|0x4AC65113
+return|;
+block|}
+comment|// Breakout calculation of the termArrays hashcode
+DECL|method|termArraysHashCode
+specifier|private
+name|int
+name|termArraysHashCode
+parameter_list|()
+block|{
+name|int
+name|hashCode
+init|=
+literal|1
+decl_stmt|;
+name|Iterator
+name|iterator
+init|=
+name|termArrays
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|iterator
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|Term
+index|[]
+name|termArray
+init|=
+operator|(
+name|Term
+index|[]
+operator|)
+name|iterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|hashCode
+operator|=
+literal|31
+operator|*
+name|hashCode
+operator|+
+operator|(
+name|termArray
+operator|==
+literal|null
+condition|?
+literal|0
+else|:
+name|arraysHashCode
+argument_list|(
+name|termArray
+argument_list|)
+operator|)
+expr_stmt|;
+block|}
+return|return
+name|hashCode
+return|;
+block|}
+DECL|method|arraysHashCode
+specifier|private
+name|int
+name|arraysHashCode
+parameter_list|(
+name|Term
+index|[]
+name|termArray
+parameter_list|)
+block|{
+if|if
+condition|(
+name|termArray
+operator|==
+literal|null
+condition|)
+return|return
+literal|0
+return|;
+name|int
+name|result
+init|=
+literal|1
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|termArray
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Term
+name|term
+init|=
+name|termArray
+index|[
+name|i
+index|]
+decl_stmt|;
+name|result
+operator|=
+literal|31
+operator|*
+name|result
+operator|+
+operator|(
+name|term
+operator|==
+literal|null
+condition|?
+literal|0
+else|:
+name|term
+operator|.
+name|hashCode
+argument_list|()
+operator|)
+expr_stmt|;
+block|}
+return|return
+name|result
+return|;
+block|}
+comment|// Breakout calculation of the termArrays equals
+DECL|method|termArraysEquals
+specifier|private
+name|boolean
+name|termArraysEquals
+parameter_list|(
+name|List
+name|termArrays1
+parameter_list|,
+name|List
+name|termArrays2
+parameter_list|)
+block|{
+if|if
+condition|(
+name|termArrays1
+operator|.
+name|size
+argument_list|()
+operator|!=
+name|termArrays2
+operator|.
+name|size
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+name|ListIterator
+name|iterator1
+init|=
+name|termArrays1
+operator|.
+name|listIterator
+argument_list|()
+decl_stmt|;
+name|ListIterator
+name|iterator2
+init|=
+name|termArrays2
+operator|.
+name|listIterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|iterator1
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|Term
+index|[]
+name|termArray1
+init|=
+operator|(
+name|Term
+index|[]
+operator|)
+name|iterator1
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|Term
+index|[]
+name|termArray2
+init|=
+operator|(
+name|Term
+index|[]
+operator|)
+name|iterator2
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|!
+operator|(
+name|termArray1
+operator|==
+literal|null
+condition|?
+name|termArray2
+operator|==
+literal|null
+else|:
+name|Arrays
+operator|.
+name|equals
+argument_list|(
+name|termArray1
+argument_list|,
+name|termArray2
+argument_list|)
+operator|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+return|return
+literal|true
 return|;
 block|}
 block|}
