@@ -1226,6 +1226,160 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testHashCodeAndEquals
+specifier|public
+name|void
+name|testHashCodeAndEquals
+parameter_list|()
+block|{
+name|MultiPhraseQuery
+name|query1
+init|=
+operator|new
+name|MultiPhraseQuery
+argument_list|()
+decl_stmt|;
+name|MultiPhraseQuery
+name|query2
+init|=
+operator|new
+name|MultiPhraseQuery
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|query1
+operator|.
+name|hashCode
+argument_list|()
+argument_list|,
+name|query2
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|query1
+argument_list|,
+name|query2
+argument_list|)
+expr_stmt|;
+name|Term
+name|term1
+init|=
+operator|new
+name|Term
+argument_list|(
+literal|"someField"
+argument_list|,
+literal|"someText"
+argument_list|)
+decl_stmt|;
+name|query1
+operator|.
+name|add
+argument_list|(
+name|term1
+argument_list|)
+expr_stmt|;
+name|query2
+operator|.
+name|add
+argument_list|(
+name|term1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|query1
+operator|.
+name|hashCode
+argument_list|()
+argument_list|,
+name|query2
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|query1
+argument_list|,
+name|query2
+argument_list|)
+expr_stmt|;
+name|Term
+name|term2
+init|=
+operator|new
+name|Term
+argument_list|(
+literal|"someField"
+argument_list|,
+literal|"someMoreText"
+argument_list|)
+decl_stmt|;
+name|query1
+operator|.
+name|add
+argument_list|(
+name|term2
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|query1
+operator|.
+name|hashCode
+argument_list|()
+operator|==
+name|query2
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|query1
+operator|.
+name|equals
+argument_list|(
+name|query2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|query2
+operator|.
+name|add
+argument_list|(
+name|term2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|query1
+operator|.
+name|hashCode
+argument_list|()
+argument_list|,
+name|query2
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|query1
+argument_list|,
+name|query2
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|add
 specifier|private
 name|void
